# mlops-final-project

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  docker-compose.yaml  migration_airflow_config_todo.md  pyproject.toml
.github/: Folder Description
.github/workflows/: ci.yml
airflow/config/: airflow.cfg
airflow/dags/: deployment_dag.py  drift_dag.py  training_dag.py
dags/: Folder Description  airflow.cfg  deployment_dag.py  drift_dag.py  training_dag.py
data/processed/: preprocessor.pkl  test_data.parquet  train_data.parquet
data/reference/: file
docker/: .dockerignore  Dockerfile  airflow.Dockerfile  docker-compose.yaml  fastapi.Dockerfile  mlflow.Dockerfile
docs/: data_dictionary.md  drift_plan.md
models/: trained_model.pkl
notebooks/: Folder Description
src/data/: get_data.py  ingest.py  simulate_drift.py
src/deployment/: promote.py
src/features/: transform.py
src/models/: train.py  validate.py
src/monitoring/: generate_drift.py
src/serve/: app.py
tests/: Folder Description  README.md  __init__.py  conftest.py  run_tests.py  test_api.py  test_train.py  test_transform.py
