[project]
name = "mlops-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "joblib>=1.5.2",
    "kaggle>=1.7.4.5",
    "mlflow>=3.3.2",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.1",
    "xgboost>=3.0.4",
]
