[project]
name = "mlops-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow>=3.0.4",
    "evidently>=0.7.14",
    "ipykernel>=6.30.1",
    "joblib>=1.5.2",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.5",
    "mlflow>=3.3.2",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "xgboost>=3.0.4",
]
