[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops-final-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "evidently>=0.7.14",
    "fastapi>=0.104.1",
    "ipykernel>=6.30.1",
    "joblib>=1.5.2",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.5",
    "mlflow>=3.3.2",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "uvicorn>=0.24.0",
    "xgboost>=3.0.4",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff.per-file-ignores]
"tests/*.py" = ["E402"]
